Added languages string, redirect option etc

--- a/language/en-GB/en-GB.com_contactus.ini
+++ b/language/en-GB/en-GB.com_contactus.ini
@@ -28,6 +28,7 @@ COM_CONTACTUS_SEND_MESSAGE="Send message"
 COM_CONTACTUS_MESSAGE_LABEL="Message"
 COM_CONTACTUS_MESSAGE_DESCRIPTION="Your enquiry message to us"
 COM_CONTACTUS_MESSAGE_MESSAGE="Please check your message. Maximum length is 10000 characters."
-COM_CONTACTUS_EMAIL_SUBJECT="DHS Souther website enquiry"
+COM_CONTACTUS_EMAIL_SUBJECT="%s website enquiry"
 COM_CONTACTUS_EMAIL_BODY="<strong>Enquiry:</strong>%s <br /><br /> <strong>Tel:</strong> %s"
 COM_CONTACTUS_EMAIL_SUCCESS="Thank you for your enquiry. We will be in touch shortly to respond to your query."
+COM_CONTACTUS_CONTACT_SEND="Get in touch"
